crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@373.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query(\n\t'[\"12:34:00+01\", \"12:35:00+01\", \"12:36:00+01\", \"12:35:00+02\", \"12:35:00-02\", \"10:35:00\", \"11:35:00\", \"12:35:00\", \"2017-03-10\", \"2017-03-10 12:35:00\", \"2017-03-10 12:35:00 +1\"]',\n\t'$[*].datetime() ? (@ >= \"12:35 +1\".datetime(\"HH24:MI TZH\"))');"
---
SelectStmt@0..268
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..266
    FuncCall@7..266
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      Newline@24..25 "\n"
      Newline@25..26 "\t"
      AConst@26..202
        Sconst@26..202 "'[\"12:34:00+01\", \"12: ..."
      Ascii44@202..203 ","
      Newline@203..204 "\n"
      Newline@204..205 "\t"
      AConst@205..266
        Sconst@205..266 "'$[*].datetime() ? (@ ..."
  Ascii41@266..267 ")"
  Ascii59@267..268 ";"

