crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@376.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query_tz(\n\t'[\"12:34:00+01\", \"12:35:00+01\", \"12:36:00+01\", \"12:35:00+02\", \"12:35:00-02\", \"10:35:00\", \"11:35:00\", \"12:35:00\", \"2017-03-10\", \"2017-03-10 12:35:00\", \"2017-03-10 12:35:00 +1\"]',\n\t'$[*].datetime() ? (@ >= \"12:35 +1\".datetime(\"HH24:MI TZH\"))');"
---
SelectStmt@0..271
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..269
    FuncCall@7..269
      Ident@7..26 "jsonb_path_query_tz"
      Ascii40@26..27 "("
      Newline@27..28 "\n"
      Newline@28..29 "\t"
      AConst@29..205
        Sconst@29..205 "'[\"12:34:00+01\", \"12: ..."
      Ascii44@205..206 ","
      Newline@206..207 "\n"
      Newline@207..208 "\t"
      AConst@208..269
        Sconst@208..269 "'$[*].datetime() ? (@ ..."
  Ascii41@269..270 ")"
  Ascii59@270..271 ";"

