crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@379.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query(\n\t'[\"2017-03-10 12:34:00\", \"2017-03-10 12:35:00\", \"2017-03-10 12:36:00\", \"2017-03-10 12:35:00+01\", \"2017-03-10 13:35:00+01\", \"2017-03-10 12:35:00-01\", \"2017-03-10\", \"2017-03-11\", \"12:34:56\", \"12:34:56+01\"]',\n\t'$[*].datetime() ? (@ >= \"10.03.2017 12:35\".datetime(\"dd.mm.yyyy HH24:MI\"))');"
---
SelectStmt@0..311
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..309
    FuncCall@7..309
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      Newline@24..25 "\n"
      Newline@25..26 "\t"
      AConst@26..230
        Sconst@26..230 "'[\"2017-03-10 12:34:0 ..."
      Ascii44@230..231 ","
      Newline@231..232 "\n"
      Newline@232..233 "\t"
      AConst@233..309
        Sconst@233..309 "'$[*].datetime() ? (@ ..."
  Ascii41@309..310 ")"
  Ascii59@310..311 ";"

