crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@383.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query_tz(\n\t'[\"2017-03-10 12:34:00\", \"2017-03-10 12:35:00\", \"2017-03-10 12:36:00\", \"2017-03-10 12:35:00+01\", \"2017-03-10 13:35:00+01\", \"2017-03-10 12:35:00-01\", \"2017-03-10\", \"2017-03-11\", \"12:34:56\", \"12:34:56+01\"]',\n\t'$[*].datetime() ? (@ < \"10.03.2017 12:35\".datetime(\"dd.mm.yyyy HH24:MI\"))');"
---
SelectStmt@0..313
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..311
    FuncCall@7..311
      Ident@7..26 "jsonb_path_query_tz"
      Ascii40@26..27 "("
      Newline@27..28 "\n"
      Newline@28..29 "\t"
      AConst@29..233
        Sconst@29..233 "'[\"2017-03-10 12:34:0 ..."
      Ascii44@233..234 ","
      Newline@234..235 "\n"
      Newline@235..236 "\t"
      AConst@236..311
        Sconst@236..311 "'$[*].datetime() ? (@ ..."
  Ascii41@311..312 ")"
  Ascii59@312..313 ";"

