crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@385.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query(\n\t'[\"2017-03-10 12:34:00+01\", \"2017-03-10 12:35:00+01\", \"2017-03-10 12:36:00+01\", \"2017-03-10 12:35:00+02\", \"2017-03-10 12:35:00-02\", \"2017-03-10 10:35:00\", \"2017-03-10 11:35:00\", \"2017-03-10 12:35:00\", \"2017-03-10\", \"2017-03-11\", \"12:34:56\", \"12:34:56+01\"]',\n\t'$[*].datetime() ? (@ >= \"10.03.2017 12:35 +1\".datetime(\"dd.mm.yyyy HH24:MI TZH\"))');"
---
SelectStmt@0..370
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..368
    FuncCall@7..368
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      Newline@24..25 "\n"
      Newline@25..26 "\t"
      AConst@26..282
        Sconst@26..282 "'[\"2017-03-10 12:34:0 ..."
      Ascii44@282..283 ","
      Newline@283..284 "\n"
      Newline@284..285 "\t"
      AConst@285..368
        Sconst@285..368 "'$[*].datetime() ? (@ ..."
  Ascii41@368..369 ")"
  Ascii59@369..370 ";"

